feat(refactor): changed files to deal better with TYPO3 13

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -4,7 +4,9 @@
         <header />
         <body>
             <trans-unit id="default" xml:space="preserve">
+                <source>Default</source>
                 <target>Standard</target>
             </trans-unit>
+        </body>
     </file>
 </xliff>
